Closed
Bug 320210
Opened 20 years ago
Closed 20 years ago
nsAppRunner doesnt compile without xpinstall
Categories
(Toolkit :: Startup and Profile System, defect)
Toolkit
Startup and Profile System
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: aaiyer, Assigned: aaiyer)
References
Details
Attachments
(1 file, 1 obsolete file)
|
2.72 KB,
patch
|
benjamin
:
first-review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)
Build Identifier:
MOZ_XPINSTALL not defined around xpinstall specific areas
Reproducible: Always
Steps to Reproduce:
| Assignee | ||
Comment 1•20 years ago
|
||
| Assignee | ||
Updated•20 years ago
|
Attachment #205798 -
Attachment description: wrap xpinstall around MOZ_XPINSTALL ifdefs → wrap xpinstall specific areas around MOZ_XPINSTALL ifdefs
Comment 2•20 years ago
|
||
CVS diff of the above patch (didn't test it myself).
aaiyer: you should attach CVS diff and request reviews to get the patch into tree.
Attachment #205798 -
Attachment is obsolete: true
Attachment #208037 -
Flags: first-review?(benjamin)
Comment 3•20 years ago
|
||
Oops, just noticed - bug 198584.
Updated•20 years ago
|
Attachment #208037 -
Flags: first-review?(benjamin) → first-review+
Updated•20 years ago
|
Whiteboard: [checkin needed]
Updated•20 years ago
|
Assignee: nobody → aaiyer
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 4•20 years ago
|
||
Checked in on the trunk. Thanks for the patch Anand!
mozilla/toolkit/xre/nsAppRunner.cpp; new revision: 1.124;
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → mozilla1.9alpha1
Version: unspecified → Trunk
*** Bug 234827 has been marked as a duplicate of this bug. ***
Comment 6•20 years ago
|
||
Comment on attachment 208037 [details] [diff] [review]
patch from reporter
This is preventing us from losing xpcom/obsolete when building Sunbird on 1.8 branch
Attachment #208037 -
Flags: approval-branch-1.8.1?(benjamin)
Comment 7•20 years ago
|
||
Reopening to see if we can get this on MOZILLA_1_8_BRANCH without breaking the world.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 8•20 years ago
|
||
Who's "we"? Nobody except for small devices should be disabling xpinstall, certainly not sunbird.
Comment 9•20 years ago
|
||
(In reply to comment #8)
> Who's "we"? Nobody except for small devices should be disabling xpinstall,
> certainly not sunbird.
We = Sunbird.
Okay. So we can't lose xpcom-obsolete from the branch then since xpinstall claims to require xpcom-obsolete.
Let me know if I'm missing something.
Removing br? and -> back to FIXED
Status: REOPENED → RESOLVED
Closed: 20 years ago → 20 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Attachment #208037 -
Flags: approval-branch-1.8.1?(benjamin)
Comment 10•20 years ago
|
||
(In reply to comment #9)
> So we can't lose xpcom-obsolete from the branch then since xpinstall
> claims to require xpcom-obsolete.
That should be "from the Sunbird branch build"
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
You need to log in
before you can comment on or make changes to this bug.
Description
•