Bug 320210: nsAppRunner doesnt compile without xpinstall, patch by Anand Aiyer <aaiyer@asvcyber.com>, r=bsmedberg